--- a/.env
+++ b/.env
@@ -25,3 +25,5 @@ MEDAL_API_KEY=
 # Supabase (Configure após criar projeto)
 SUPABASE_URL=https://SEU_PROJECT_REF.supabase.co
 SUPABASE_KEY=SUA_ANON_KEY
+
+RENDER_API_KEY=rnd_LJKIyBRBBnUv49X5jJ67NTZR5a97
