--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ DISCORD_TOKEN=MTQwODE1NTczNTQ1MTM2OTUzNA.GUEGAW.umvZoNwDCiLZlTnM67sEsc5XpZh5qbuz
 BOT_PREFIX=!
 
 # Database (Configure após criar projeto Supabase)
-DATABASE_URL=postgresql://postgres:HawkBot2024!@#@db.SEU_PROJECT_REF.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres:HawkBot2024!%40%23@db.SEU_PROJECT_REF.supabase.co:5432/postgres
 
 # Render Settings
 RENDER=true
-WEB_PORT=10000
+PORT=10000
 WEB_HOST=0.0.0.0
 
 # Bot Settings
