--- a/render.yaml
+++ b/render.yaml
@@ -42,7 +42,9 @@ services:
       - key: RENDER
         value: "true"
       - key: RENDER_EXTERNAL_URL
-        value: "https://hawk-esports-bot.onrender.com"
+    value: https://hawk-esports-bot.onrender.com
+  - key: API_PUBG_API_KEY
+    value: your_pubg_api_key_here
     autoDeploy: true
     healthCheckPath: /health
     healthCheckTimeout: 30
