--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,8 @@ PyNaCl>=1.5.0
 # Web Framework for Dashboard
 flask>=2.3.0
 flask-cors>=4.0.0
+gunicorn>=21.2.0
+waitress>=3.0.0
 
 # Dependency Injection and Advanced Features
 injector>=0.21.0
