--- a/render.yaml
+++ b/render.yaml
@@ -2,52 +2,33 @@ services:
   - type: web
     name: hawk-esports-bot
     env: python
-    region: oregon
     plan: free
-    buildCommand: pip install --no-cache-dir -r requirements.txt
-    startCommand: gunicorn wsgi:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120
+    buildCommand: pip install -r requirements.txt
+    startCommand: python main.py
     envVars:
       - key: PYTHON_VERSION
-        value: 3.13.4
-      - key: PORT
-        value: 10000
+        value: 3.11.0
       - key: DISCORD_TOKEN
         sync: false
-      - key: DISCORD_BOT_TOKEN
+      - key: DATABASE_URL
         sync: false
-      - key: DATABASE_STORAGE_TYPE
-        value: json
-      - key: DATABASE_JSON_FILE_PATH
-        value: /opt/render/project/src/data/bot_data.json
-      - key: DISCORD_COMMAND_PREFIX
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_KEY
+        sync: false
+      - key: PUBG_API_KEY
+        sync: false
+      - key: MEDAL_API_KEY
+        sync: false
+      - key: BOT_PREFIX
         value: "!"
-      - key: DISCORD_ENABLE_MESSAGE_CONTENT
-        value: "true"
-      - key: DISCORD_ENABLE_GUILD_MEMBERS
-        value: "true"
-      - key: DISCORD_ENABLE_VOICE_STATES
-        value: "true"
-      - key: DISCORD_CASE_INSENSITIVE
-        value: "true"
-      - key: WEB_DASHBOARD_ENABLED
-        value: "true"
-      - key: WEB_DASHBOARD_HOST
-        value: "0.0.0.0"
-      - key: WEB_DASHBOARD_PORT
-        value: "10000"
-      - key: WEB_DASHBOARD_DEBUG
-        value: "false"
-      - key: ENVIRONMENT
-        value: production
       - key: RENDER
         value: "true"
-      - key: RENDER_EXTERNAL_URL
-        value: https://hawk-esports-bot.onrender.com
-      - key: API_PUBG_API_KEY
-        value: your_pubg_api_key_here
+      - key: WEB_PORT
+        value: "10000"
+      - key: WEB_HOST
+        value: "0.0.0.0"
     autoDeploy: true
-    healthCheckPath: /health
-    healthCheckTimeout: 30
     healthCheckInterval: 60
     disk:
       name: hawk-bot-data
