--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Discord Bot Requirements - Hawk Esports PUBG Bot
-# Python 3.10+ required
+# Simplified for Render deployment
 
 # Discord API
 discord.py>=2.3.0
@@ -14,69 +14,29 @@ python-dotenv>=0.19.0
 # Date/Time Utilities
 python-dateutil>=2.8.0
 
-# Logging
-coloredlogs>=15.0
-
 # Async Utilities
 aiofiles>=0.8.0
 
-# URL Parsing
-furl>=2.1.0
-
-# Regular Expressions (enhanced)
-regex>=2022.1.18
-
-# Data Validation and Configuration
+# Data Validation
 pydantic>=2.5.0
-pydantic-settings>=2.1.0
 
 # Timezone Support
 pytz>=2022.1
 
-# Performance Monitoring and Caching
+# Performance Monitoring
 psutil>=5.9.0
-redis>=5.0.0
-cachetools>=5.3.0
 
-# Database Dependencies
-psycopg2-binary>=2.9.0
-asyncpg>=0.28.0
-sqlalchemy>=2.0.0
-alembic>=1.12.0
-
-# Charts and Graphics System
-matplotlib>=3.7.0
-seaborn>=0.12.0
-pandas>=2.0.0
-numpy>=1.24.0
-
-# Music System Dependencies
+# Music System (essential only)
 yt-dlp>=2023.7.6
 PyNaCl>=1.5.0
 
 # Web Framework for Dashboard
 flask>=2.3.0
 flask-cors>=4.0.0
-gunicorn>=21.2.0
 waitress>=3.0.0
 
-# Dependency Injection and Advanced Features
-injector>=0.21.0
-typing-extensions>=4.8.0
-
-# Enhanced Logging and Monitoring
-structlog>=23.2.0
-rich>=13.7.0
-
-# Security and Validation
+# Security
 cryptography>=41.0.0
-validators>=0.22.0
 
-# Development Dependencies (optional)
-# Uncomment if needed for development
-# pytest>=7.4.3
-# pytest-asyncio>=0.21.1
-# black>=23.11.0
-# flake8>=6.1.0
-# mypy>=1.7.1
-# pre-commit>=3.6.0
+# Enhanced Logging
+rich>=13.7.0
