FIX: Novo nome de serviço no render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: hawk-esports-bot
+    name: hawk-esports-discord-bot
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
