SECURITY: Atualizar token Discord + Corrigir deploy Replit

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 # Copie este arquivo para .env e preencha com seus valores reais
 
 # ===== CONFIGURAÇÃO DO DISCORD =====
-DISCORD_TOKEN=MTQwODE1NTczNTQ1MTM2OTUzNA.GUEGAW.umvZoNwDCiLZlTnM67sEsc5XpZh5qbuzktBBvw
-DISCORD_BOT_TOKEN=MTQwODE1NTczNTQ1MTM2OTUzNA.GUEGAW.umvZoNwDCiLZlTnM67sEsc5XpZh5qbuzktBBvw
+DISCORD_TOKEN=MTQwODE1NTczNTQ1MTM2OTUzNA.GMAR_g.v6Z8OW201NvE2aqjXZnlcgp1M9eg4J7dGG3NVg
+DISCORD_BOT_TOKEN=MTQwODE1NTczNTQ1MTM2OTUzNA.GMAR_g.v6Z8OW201NvE2aqjXZnlcgp1M9eg4J7dGG3NVg
 DISCORD_COMMAND_PREFIX=!
 DISCORD_ENABLE_MESSAGE_CONTENT=true
 DISCORD_ENABLE_GUILD_MEMBERS=true
