fix(deploy): adiciona asyncpg e corrige estrutura para Render
- Adiciona asyncpg>=0.29.0 ao requirements.txt
- Atualiza runtime.txt para Python 3.11.10
- Corrige imports no main.py para compatibilidade com Render
- Melhora robustez da conexão com banco (reconexão automática)
- Ajusta Procfile para usar apenas worker

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,10 @@ cryptography>=41.0.0
 
 # Enhanced Logging
 rich>=13.7.0
+
+# Database (PostgreSQL)
+asyncpg>=0.29.0
+
+# Additional Dependencies
+weakref-backport>=1.0.0; python_version<'3.9'
+typing-extensions>=4.8.0
